# dream-11-team-maker

dream_11/: README.md  pyproject.toml
dream_11/src/dream_11/: crew.py  main.py
dream_11/src/dream_11/config/: agents.yaml  tasks.yaml
