[project]
name = "dream_11"
version = "0.1.0"
description = "dream-11 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0",
    "pydantic>=2.4.2",
]

[project.scripts]
dream_11 = "dream_11.main:run"
run_crew = "dream_11.main:run"
train = "dream_11.main:train"
replay = "dream_11.main:replay"
test = "dream_11.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
